NetBSD Problem Report #48413

From root@vs-2.iastate.edu  Wed Nov 27 19:00:28 2013
Return-Path: <root@vs-2.iastate.edu>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 9C688A628D
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 27 Nov 2013 19:00:28 +0000 (UTC)
Message-Id: <20131127173327.D33C4654136@vs-2.iastate.edu>
Date: Wed, 27 Nov 2013 11:33:27 -0600 (CST)
From: john@iastate.edu
Reply-To: john@iastate.edu
To: gnats-bugs@gnats.NetBSD.org
Subject: kdump sign extension bug
X-Send-Pr-Version: 3.95

>Number:         48413
>Category:       bin
>Synopsis:       Inappropriate sign extension in kdump output
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Nov 27 19:05:00 +0000 2013
>Closed-Date:    Wed Nov 27 21:54:58 +0000 2013
>Last-Modified:  Wed Nov 27 21:55:00 +0000 2013
>Originator:     john@iastate.edu
>Release:        NetBSD 6.1.2
>Organization:
Iowa State University
>Environment:
System: NetBSD vs-2.iastate.edu 6.1.2 NetBSD 6.1.2 (GENERIC) amd64
Architecture: x86_64
Machine: amd64
>Description:
This line:
	 25891      1 zephyrd  MISC  sockname: 16, 10020837ffffff81ffffffbaffffff8effffffc70000000000000000
should read:
	 25891      1 zephyrd  MISC  sockname: 16, 1002083781ba8ec70000000000000000
>How-To-Repeat:
	ktrace -p N, N the pid of some process with a socket to an ip address which has one or more octets > 0x7f
	kdump | grep 'MISC.*sockname:'
>Fix:
	something along the lines of ''(byte & 255)'' I presume.

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48413 CVS commit: src/usr.bin/kdump
Date: Wed, 27 Nov 2013 15:27:58 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Nov 27 20:27:58 UTC 2013

 Modified Files:
 	src/usr.bin/kdump: kdump.c

 Log Message:
 PR/48413: Inappropriate sign extension in kdump output


 To generate a diff of this commit:
 cvs rdiff -u -r1.116 -r1.117 src/usr.bin/kdump/kdump.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 27 Nov 2013 21:42:58 +0000
State-Changed-Why:
christos committed a fix, does it work for you?


State-Changed-From-To: feedback->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 27 Nov 2013 21:54:58 +0000
State-Changed-Why:
Submitter is happy :)


From: John Hascall <john@iastate.edu>
To: gnats-bugs@netbsd.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, wiz@netbsd.org
Subject: Re: bin/48413 (Inappropriate sign extension in kdump output)
Date: Wed, 27 Nov 2013 15:53:19 -0600

 --089e0158c07a09091104ec2fa081
 Content-Type: text/plain; charset=ISO-8859-1

 Looks correct to me.

 John


 On Wed, Nov 27, 2013 at 3:42 PM, <wiz@netbsd.org> wrote:

 > Synopsis: Inappropriate sign extension in kdump output
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: wiz@NetBSD.org
 > State-Changed-When: Wed, 27 Nov 2013 21:42:58 +0000
 > State-Changed-Why:
 > christos committed a fix, does it work for you?
 >
 >
 >
 >

 --089e0158c07a09091104ec2fa081
 Content-Type: text/html; charset=ISO-8859-1
 Content-Transfer-Encoding: quoted-printable

 <div dir=3D"ltr"><div class=3D"gmail_default" style=3D"font-family:verdana,=
 sans-serif">Looks correct to me.<br><br>John<br></div></div><div class=3D"g=
 mail_extra"><br><br><div class=3D"gmail_quote">On Wed, Nov 27, 2013 at 3:42=
  PM,  <span dir=3D"ltr">&lt;<a href=3D"mailto:wiz@netbsd.org" target=3D"_bl=
 ank">wiz@netbsd.org</a>&gt;</span> wrote:<br>
 <blockquote class=3D"gmail_quote" style=3D"margin:0 0 0 .8ex;border-left:1p=
 x #ccc solid;padding-left:1ex">Synopsis: Inappropriate sign extension in kd=
 ump output<br>
 <br>
 State-Changed-From-To: open-&gt;feedback<br>
 State-Changed-By: wiz@NetBSD.org<br>
 State-Changed-When: Wed, 27 Nov 2013 21:42:58 +0000<br>
 State-Changed-Why:<br>
 christos committed a fix, does it work for you?<br>
 <br>
 <br>
 <br>
 </blockquote></div><br></div>

 --089e0158c07a09091104ec2fa081--

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.