PR/48413: Inappropriate sign extension in kdump output